Modified the pom to include all the modules