@@ -1,22 +1,22 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.leidos.xchangecore</groupId>
-    <artifactId>core</artifactId>
+    <groupId>com.leidos.xchangecore.core</groupId>
+    <artifactId>parent</artifactId>
     <packaging>pom</packaging>
-    <name>xChangeCore project</name>
+    <name>xChangeCore's parent pom</name>
     <version>1.0.0</version>
 
     <modules>
-        <module>infrastructure-messages</module>
-        <module>infrastructure-services</module>
-        <!--
-            <module>infrastructure-xmpp</module>
-        -->
+        <module>infra-messages</module>
+        <module>infra-services</module>
+        <module>infra-xmpp</module>
+        <module>em-services</module>
+        <module>em-processes</module>
+        <module>em-war</module>
     </modules>
 
     <properties>
@@ -29,10 +29,13 @@
         <xmlbeans-have.version>1.1.2</xmlbeans-have.version>
         <xmlbeans-infrastructure.version>1.2.1</xmlbeans-infrastructure.version>
         <xmlbeans-edxl_rm.version>1.0.0</xmlbeans-edxl_rm.version>
-        <infrastructure.version>1.2.0</infrastructure.version>
-        <infrastructure.xmpp.version>1.2.0</infrastructure.xmpp.version>
-        <em.version>1.2.0</em.version>
-        <em-war.version>1.1.1</em-war.version>
+        <infra-messages.version>2.0.0</infra-messages.version>
+        <infra-xmpp.version>2.0.0</infra-xmpp.version>
+        <infra-services.version>2.0.0</infra-services.version>
+        <em-services.version>2.0.0</em-services.version>
+        <em-processes.version>2.0.0</em-processes.version>
+        <em-war.version>2.0.0</em-war.version>
+
         <github.global.server>github</github.global.server>
         <!--
             <my.hibernate.hbm2ddl.auto>update</my.hibernate.hbm2ddl.auto>
@@ -53,11 +56,34 @@
         <repository>
             <id>xchangecore-mvn-repo</id>
             <name>The global repository for the general purpose</name>
-            <url>https://github.com/huangdy/xchangecore-maven-repo/raw/master</url>
+            <url>https://github.com/huangdy/xchangecore-mvn-repo/raw/master</url>
         </repository>
     </repositories>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.4</version>
+        </dependency>
+    </dependencies>
+
     <build>
+
+        <resources>
+            <resource>
+                <directory>${basedir}/src/main/resources</directory>
+            </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <groupId>com.github.github</groupId>
@@ -110,6 +136,19 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18.1</version>
+                <!-- forkMode and MaxPermSize are set to overcome OutOfMemory exceptions
+                    <configuration>
+                    <forkMode>once</forkMode>
+                    <argLine>-XX:MaxPermSize=128M</argLine>
+                    </configuration>
+                -->
+            </plugin>
+
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>xmlbeans-maven-plugin</artifactId>
